--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.3@dev",
-        "orchestra/testbench": "^3.7@dev"
+        "phpunit/phpunit": "^9.3.3@dev",
+        "orchestra/testbench": "^6.0",
+        "laravel/legacy-factories": "^1.3"
     }
 }
