--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,6 +23,7 @@
 	},
 	"extensions": [
 		"bmewburn.vscode-intelephense-client",
-		"junstyle.php-cs-fixer"
+		"junstyle.php-cs-fixer",
+        "DEVSENSE.phptools-vscode"
 	]
 }
